Move slow test classes to integration-test phase